# SEPAL

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
.spyproject/config/: workspace.ini
demo/: Untitled1.ipynb  demo_aif.ipynb  demo_aif_module.ipynb  demo_conc_to_enh.ipynb  demo_enh_to_conc.ipynb  demo_fit_dce.ipynb  demo_fit_t1.ipynb  demo_fit_t2s.ipynb  demo_fit_t2s.pynb.ipynb  demo_fitdce_conc.ipynb  demo_fitdce_signal.ipynb  demo_imaging_utilities.ipynb  demo_interpolation.ipynb  demo_mt.ipynb  demo_pk_models.ipynb  demo_relaxivity_module.ipynb  demo_signal_models.ipynb  demo_simulate_and_fit.ipynb  demo_simulation.ipynb  demo_water_ex_models.ipynb
demo/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  demo1-checkpoint.ipynb  demo_aif-checkpoint.ipynb  demo_fit_t1-checkpoint.ipynb  demo_fitdce_conc-checkpoint.ipynb  demo_fitdce_signal-checkpoint.ipynb  demo_pk_models-checkpoint.ipynb  demo_pkmodels-checkpoint.ipynb  demo_simulate_and_fit-checkpoint.ipynb  demo_simulation-checkpoint.ipynb
demo/DCE_ROI_data/: k_tissue.npy  k_vif.npy  signal_tissue.npy  signal_vif.npy  t1_tissue.npy  t1_vif.npy
demo/T1_IRSE_data/: rSeries03.nii  rSeries04.nii  rSeries05.nii  rSeries06.nii  rSeries07.nii  rSeries08.nii
mrifit/: t1.py
scripts/: script_demo_vfa_phantom.py  t_image.py  vfa_phantom.py
src/: README.md  aifs.py  dce_fit.py  fit.py  fitting.py  mt.py  pk_models.py  signal_models.py  t1_fit.py  t2star_fit.py  water_ex_models.py
src/dce/: aifs.py  conc_to_r.py  dce_fit.py  fit.py  models.py  pk_models.py  r_to_s.py  relax.py  (+8 more)
(+18 files in other folders)
